Make queries with lookup field and table alias work

BUG:330910